--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main>
     <!-- section 1 -->
     <section>
-        <h1>Эффективные решения <br>для вашего бизнеса></h1>
+        <h1>Эффективные решения <br>для вашего бизнеса</h1>
         <button>Заказать услугу</button>
     </section>
     <!-- section 2 -->
