--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
         <nav>
         <a href="/index.html">WebStudio</a>
         <ul>
-            <li><a href=""></a>Студия</li>
-            <li><a href=""></a>Портфолио</li>
-            <li><a href=""></a>Контакты</li>
+            <li><a href="">Студия</a></li>
+            <li><a href="">Портфолио</a></li>
+            <li><a href="">Контакты</a></li>
         </ul>
         </nav>
-        <div>
+        
             <ul>
-                <li><a href=""></a>info@devstudio.com</li>
-                <li><a href=""></a>+38 096 111 11 11</li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
-        </div>
+       
     </header>
     <main>
     <!-- section 1 -->
@@ -67,18 +67,18 @@
         <ul>
             <li> <a href=""><img src="./Images/img1.jpeg" alt="Игорь Демьяненко" width="270"></a>
             <h3>Игорь Демьяненко</h3>
-        <p>Product Designer</p></li>
+        <p lang="en-GB">Product Designer</p></li>
         <li> <a href=""><img src="./Images/img2.jpeg" alt="Ольга Репина" width="270"></a>
             <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <p lang="en-GB">Frontend Developer</p>
         </li>
         <li> <a href=""><img src="./Images/img3.jpeg" alt="Николай Тарасов" width="270"></a>
             <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <p lang="en-GB">Marketing</p>
         </li>
         <li> <a href=""><img src="./Images/img4.jpeg" alt="Михаил Ермаков" width="270"></a>
             <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <p lang="en-GB">UI Designer</p>
         </li>
         </ul>
     </section>
@@ -86,9 +86,12 @@
     <!-- Футер -->
     <footer>
         <a href="/index.html">WebStudio</a>
-        <address>г. Киев, пр-т Леси Украинки, 26 <br>
-        info@example.com <br>
-    +38 099 111 11 11</address>
+        <address><p>г. Киев, пр-т Леси Украинки, 26</p>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+    </address>
 
     </footer>
 </body>
